--- a/src/components/sidebar/side-widget.component.scss
+++ b/src/components/sidebar/side-widget.component.scss
@@ -1,11 +1,30 @@
 .side-widget {
     width: 100%;
     height: 100px;
-    border: 1px solid black;
+    border: 1px solid lightgrey;
     border-radius: 10px;
     margin-bottom: 10px;
 }
 .side-widget:hover {
     border: 1px solid blue;
     cursor: pointer;
+}
+
+.side-widget-item-container {
+    height: 35px;
+    padding: 6px 10px
+}
+
+.widget-arrow {
+    float: right;
+}
+
+.side-widget-id {
+    font-size: large;
+    font-weight: 700;
+}
+.side-widget-price {
+    font-size: larger;
+    margin-top: -10px;
+
 }
